# GPU-PIR

./: CMakeLists.txt
src/: config.h
src/include/: bignum.h  pirgb.h  poly.h  shamir.h
src/lib/: pirgb.c  poly.c  shamir.c
test/: test_pirgb.c  test_polynomial.c
